--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -21,6 +21,23 @@
         本文： <%= board.content %></span>
     <br>
     <% end %>
+    <div class="my-4">
+        <% @likes_count = Favorite.where(board_id: board.id).count%>
+        いいね数：<%= @likes_count %>
+    </div>
+
+    <div>
+        <% favorite = Favorite.find_by(board_id: board.id)%>
+        <% if favorite.nil? %>
+        <%= link_to "いいねします", add_board_path(board), method: :post %>
+        <% else %>
+        <%  if current_user.id == favorite.user_id %>
+        <%= link_to "いいねを解除します",favorite_path(favorite), method: :delete %>
+        <% else %>
+        <%= link_to "いいねします！", add_board_path(board), method: :post %>
+        <% end %>
+        <% end %>
+    </div>
     <div class="mx-5">
         <%= link_to "詳細" ,"/boards/#{board.id}", class: 'btn btn-outline-primary btn-block my-2'%>
         <% if board.user_id == current_user.id %>
